manifests/apps/development/dvwa/deploy-targets/talos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dvwa-route
  namespace: dvwa
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "vanillax.me"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "dvwa.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: dvwa
          port: 80
          weight: 1
